# pygedm

./: .gitignore  .readthedocs.yml  .travis.yml  Dockerfile  MANIFEST.in  MIGRATION.md  README  README.md  cn.h  contributors.txt  dmdtau.c  dmdtau.cpp  dora.c  dora.cpp  fermibubble.c  frb_d.c  galcen.c  gum.c  gum.cpp  lmc.c  lmc.cpp  localbubble.c  make_cpp  make_ymw16  ne_crd.c  nps.c  py_dmdtau.cpp  pyproject.toml  pyymw16.py  references.bib  requirements.txt  requirements_test.txt  setup.cfg  setup.py  smc.c  spiral.c  spiral.cpp  thick.c  thick.cpp  thin.c  (+9 more)
.github/workflows/: generate-wheels.yml  python-app.yml  pythonpublish.yml
app/: Dockerfile  README.md  app.py  docker-compose.yml  download_data.py  requirements.txt
app/gen_maps/: make_datacube.py
docs/: conf.py  contents.rst  index.rst  ne2001.rst  pygedm.rst  requirements.txt  ymw16.rst  yt2020.rst
examples/: README.md  benchmark_dist_to_dm.py  compare_to_ne2001.py  create_healpix_map.py  debug_dist_to_dm.py  gedm.hkl  generate_allsky_healpix.ipynb  plot_galaxy_ne.py  plot_los_dm.py  ymw16_allsky.fits
healpix_maps/: README.md  dm-dust-sfd1998.fits  dm-halpha-finkbeiner2003.fits  dm-ne2001-30kpc.fits  dm-nh-hi4pi2016.fits  dm-ymw16-30kpc.fits  dm-yt2020-halo.fits
ne2001_src/: NE2001.c  NE2001.f  README.md  compile_ne2001.py  density.NE2001.c  density.NE2001.f  dmdsm.NE2001.c  dmdsm.NE2001.f  ne2001.py  ne21.h  neLISM.NE2001.c  neLISM.NE2001.f  neclumpN.c  neclumpN.f  nevoidN.c  nevoidN.f  run_f2c.sh  scattering98.c  scattering98.f
ne21c/: NE2001.c  README.md  compile.sh  get_and_compile_libf2c.sh  main.cpp  ne21.c  test_ne21c.py
pygedm/: __init__.py  healpix_utils.py  ne2001_wrapper.py  ne2025_wrapper.py  pygedm.py  ymw16_wrapper.py  yt2020.py
pygedm.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
pyymw16/: __init__.py  gal01.inp  ne2001.py  ne2001_wrapper.py  ne_gc.inp  spiral.txt  ymw16_wrapper.py  ymw16par.txt
src/: cn.hpp  dmdtau.cpp  dmdtau2.cpp  frb_d.cpp  localbubble.cpp  main.cpp  nps.cpp  py_dmdtau.cpp  pybindings.cpp  smc.cpp
tests/: test_basic.py  test_basic_ne2001.py  test_basic_ne2025.py  test_basic_raises.py  test_basic_ymw.py  test_basic_yt2020.py  test_compare.py  test_frbd.py  test_healpix_map.py  test_lbr_to_xyz.py  test_shared_obj.py  test_tau_sc.py
ymw16_src/: dmdtau2.cpp  fermibubble.cpp  frb_d.cpp  galcen.cpp  main.cpp  ne_crd.cpp  ymw16par.cpp
(+16 files in other folders)
