[build-system]
requires = ["setuptools>=77.0", "wheel", "pybind11>=2.2"]
build-backend = "setuptools.build_meta"

[project]
name = "pygedm"
version = "4.0.0"
description = "Python/C++ version of NE2001, YMW16, and YT2020 electron density models"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    {name = "D. C. Price", email = "dan@thetelegraphic.com"}
]
keywords = ["astronomy", "radio", "pulsars", "dispersion measure"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = [
    "pybind11>=2.2",
    "astropy",
    "numpy",
    "scipy",
    "tqdm",
    "importlib-metadata>=1.0; python_version < '3.8'",
    "importlib-resources>=1.3; python_version < '3.9'",
    "mwprop @ git+https://github.com/telegraphic/mwprop"
]

[project.optional-dependencies]
test = [
    "pytest>=6.0",
    "pytest-cov",
    "healpy",
]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "healpy",
    "build",
    "twine",
]

[project.urls]
Homepage = "https://github.com/frbs/pygedm"
Repository = "https://github.com/frbs/pygedm"
"Bug Tracker" = "https://github.com/frbs/pygedm/issues"
Documentation = "https://pygedm.readthedocs.io"

[tool.setuptools]
packages = ["pygedm"]
zip-safe = false
include-package-data = true

[tool.setuptools.package-data]
pygedm = [
    "spiral.txt",
    "ymw16par.txt",
    "gal01.inp",
    "ne_arms_log_mod.inp",
    "ne_gc.inp",
    "nelism.inp",
    "neclumpN.NE2001.dat",
    "nevoidN.NE2001.dat",
]

[tool.pytest.ini_options]
addopts = ["--verbose", "--cov=pygedm"]
testpaths = ["tests"]
minversion = "6.0"

[tool.coverage.run]
source = ["pygedm"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
